--- a/src/View/components/footer/footer.scss
+++ b/src/View/components/footer/footer.scss
@@ -2,12 +2,72 @@
 .footer-container {
 
     .footer-top {
-
         background-color: #2E2E2E;
-        height: 300px;
+        height: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+
+        .footer-top-upper {
+            width: 400px;
+            height: 50px;
+            background-color: #0C4CAC;
+            position: absolute;
+            margin: -160px 0px 0px 0px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            color: white;
+
+            .footer-top-upper-left {
+                width: 50%;
+            }
+
+            .footer-top-upper-right {
+                width: 50%;
+            }
+        }
 
         .footer-top-inner {
+            width: 600px;
+            display: flex;
+            flex-direction: column;
 
+            .footer-logo-holder {
+
+            }
+
+            .footer-link-holder {
+                display: flex;
+                // gap: 20px;
+                justify-content: space-around;
+                color: white;
+                font-size: 11px;
+                // border: 1px solid white;
+
+                div {
+                    cursor: pointer;
+                }
+
+                div:nth-child(5) {
+                    background-color: white;
+                    color: #2E2E2E;
+                    padding: 5px 10px;
+                    font-weight: 500;
+                    border-radius: 19px;
+                }
+            }
         }
+    }
+
+    .footer-middle {
+        background-color: #E0E0E0;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 11px;
     }
 }
