--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -2,9 +2,11 @@
     // position: relative;
     position: fixed;
     width: 100%;
+    background-color: white;
+    z-index: 10;
 
     .navbar-header {
-        border: 1px solid blue;
+        // border: 1px solid blue;
         padding: 10px 0px 10px 0px;
         height: 40px;
         max-width: 1100px;
