Navigation Bar(mobile): Hamburger and sidebar now visible. Overlay not working yet

--- a/src/View/pages/about/about.scss
+++ b/src/View/pages/about/about.scss
@@ -86,7 +86,8 @@
 
                 display: flex;
                 width: 250px;
-                height: 300px;
+                // height: 300px;
+                min-height: 300px;
                 // height: max-content;
                 flex-direction: column;
                 background-color: white;
