--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -29,6 +29,10 @@
             // border: 1px solid red;
             gap: 30px;
             font-size: 12px;
+
+            .link.active {
+                color: #0C4CAC;
+            }
     
             .book {
                 display: flex;
@@ -65,7 +69,7 @@
 
 
         .hamOne {
-            background-color: #c62828;
+            background-color: #0C4CAC;
             height: 2px;
             margin-bottom: 7px;
             border-radius: 50px;
@@ -73,18 +77,134 @@
         }
         
         .hamTwo {
-            background-color: #c62828;
+            background-color: #0C4CAC;
             height: 2px;
             margin-bottom: 7px;
             border-radius: 50px;
         }
         
         .hamThree {
-            background-color: #c62828;
+            background-color: #0C4CAC;
             height: 2px;
             border-radius: 50px;
             width: 70%;
             /* margin-left: 10px; */
+        }
+    }
+
+    
+    .navbar-sidebar {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+        // height: 100vh;
+        // width: 99%;
+        // background-color: white;
+        // border: 1px solid blue;
+        // position: fixed;
+        // top: 70px;
+        // left: 0.4%;
+        z-index: 13;
+        display: none;
+
+        .navbar-overlay{
+            height: 100vh;
+            width: 99%;
+            position: fixed;
+            z-index: 2;
+        }
+        .navbar-overlay.open{
+            display: inline-block;
+            background-color: black;
+            opacity: 0.3;
+        }
+    
+        .book {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            // border: 1.5px solid violet;
+            padding: 10px 20px;
+            border-radius: 2em;
+            background-color: #0C4CAC;
+            color: white;
+
+            span:nth-child(3) {
+                margin-top: 5px;
+                font-size: 5px;
+            }
+        }
+    }
+}
+
+
+@media only screen and (min-width: 320px) and (max-width: 400px){ //Mobile
+
+    .navbar-container {
+
+        .navbar-header{
+
+            .navbar-header-logo {
+                margin: 10px 0px 0px 15px;
+            }
+
+            .navbar-header-right {
+                display: none;
+            }
+            .navbar-hamburger{
+                visibility: visible;
+            }
+        }
+        .navbar-sidebar {
+            // height: 100vh;
+            height: max-content;
+            width: 100%;
+            background-color: white;
+            // border: 1px solid blue;
+            position: fixed;
+            // top: -870px;
+            top: 60px;
+            // left: 0px;
+            left: 400px;
+            transition: 500ms;
+            z-index: 13;
+
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            align-items: center;
+            padding: 30px 0px 30px 0px;
+
+            .link {
+                text-decoration: none;
+                // color: white;
+                color: #9e9e9e;
+            }
+            .link.active {
+                text-decoration: none;
+                // color: white;
+                color: #0C4CAC;
+            }
+            .book {
+                padding: 7px 15px;
+                background-color: #0C4CAC;
+                color: white;
+            }
+
+            // .navbar-overlay {
+            //     height: 100vh;
+            // }
+            // .navbar-overlay.open{
+            //     display: inline-block;
+            //     background-color: black;
+            //     opacity: 0.3;
+            // }
+        }
+        .navbar-sidebar.open {
+            top: 60px;
+            left: 0px;
+            transition: 500ms;
         }
     }
 }
