--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -232,3 +232,249 @@
         }
     }
 }
+
+@media only screen and (min-width: 401px) and (max-width: 450px){ //Mobile
+
+    .navbar-container {
+
+        .navbar-header{
+
+            .navbar-header-logo {
+                margin: 10px 0px 0px 15px;
+            }
+
+            .navbar-header-right {
+                display: none;
+            }
+            .navbar-hamburger{
+                visibility: visible;
+            }
+        }
+        .navbar-sidebar {
+            // height: 100vh;
+            height: max-content;
+            width: 100%;
+            background-color: white;
+            // border: 1px solid blue;
+            position: fixed;
+            // top: -870px;
+            top: 60px;
+            // left: 0px;
+            left: 400px;
+            transition: 500ms;
+            z-index: 13;
+
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            align-items: center;
+            padding: 30px 0px 30px 0px;
+
+            .link {
+                text-decoration: none;
+                // color: white;
+                color: #9e9e9e;
+            }
+            .link.active {
+                text-decoration: none;
+                // color: white;
+                color: #0C4CAC;
+            }
+            .book {
+                padding: 7px 15px;
+                background-color: #0C4CAC;
+                color: white;
+            }
+
+            // .navbar-overlay {
+            //     height: 100vh;
+            // }
+            // .navbar-overlay.open{
+            //     display: inline-block;
+            //     background-color: black;
+            //     opacity: 0.3;
+            // }
+        }
+        .navbar-sidebar.open {
+            top: 60px;
+            left: 0px;
+            transition: 600ms;
+        }
+
+        .navbar-overlay {
+            top: 60px;
+            left: 400px;
+            transition: 500ms;
+            // z-index: 13;
+        }
+        .navbar-overlay.open{
+            top: 60px;
+            left: 0px;
+            transition: 200ms;
+        }
+    }
+}
+
+@media only screen and (min-width: 451px) and (max-width: 800px){ //Mini Tablet
+
+    .navbar-container {
+
+        .navbar-header{
+
+            .navbar-header-logo {
+                margin: 10px 0px 0px 15px;
+            }
+
+            .navbar-header-right {
+                display: none;
+            }
+            .navbar-hamburger{
+                visibility: visible;
+            }
+        }
+        .navbar-sidebar {
+            // height: 100vh;
+            height: max-content;
+            width: 100%;
+            background-color: white;
+            // border: 1px solid blue;
+            position: fixed;
+            // top: -870px;
+            top: 60px;
+            // left: 0px;
+            left: 900px;
+            transition: 500ms;
+            z-index: 13;
+
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            align-items: center;
+            padding: 30px 0px 30px 0px;
+
+            .link {
+                text-decoration: none;
+                // color: white;
+                color: #9e9e9e;
+            }
+            .link.active {
+                text-decoration: none;
+                // color: white;
+                color: #0C4CAC;
+            }
+            .book {
+                padding: 7px 15px;
+                background-color: #0C4CAC;
+                color: white;
+            }
+
+            // .navbar-overlay {
+            //     height: 100vh;
+            // }
+            // .navbar-overlay.open{
+            //     display: inline-block;
+            //     background-color: black;
+            //     opacity: 0.3;
+            // }
+        }
+        .navbar-sidebar.open {
+            top: 60px;
+            left: 0px;
+            transition: 600ms;
+        }
+
+        .navbar-overlay {
+            top: 60px;
+            left: 400px;
+            transition: 500ms;
+            // z-index: 13;
+        }
+        .navbar-overlay.open{
+            top: 60px;
+            left: 0px;
+            transition: 200ms;
+        }
+    }
+}
+
+@media only screen and (min-width: 801px) and (max-width: 960px){ //Tablet
+
+    .navbar-container {
+
+        .navbar-header{
+
+            .navbar-header-logo {
+                margin: 10px 0px 0px 15px;
+            }
+
+            .navbar-header-right {
+                display: none;
+            }
+            .navbar-hamburger{
+                visibility: visible;
+            }
+        }
+        .navbar-sidebar {
+            // height: 100vh;
+            height: max-content;
+            width: 100%;
+            background-color: white;
+            // border: 1px solid blue;
+            position: fixed;
+            // top: -870px;
+            top: 60px;
+            // left: 0px;
+            left: 900px;
+            transition: 500ms;
+            z-index: 13;
+
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            align-items: center;
+            padding: 30px 0px 30px 0px;
+
+            .link {
+                text-decoration: none;
+                // color: white;
+                color: #9e9e9e;
+            }
+            .link.active {
+                text-decoration: none;
+                // color: white;
+                color: #0C4CAC;
+            }
+            .book {
+                padding: 7px 15px;
+                background-color: #0C4CAC;
+                color: white;
+            }
+
+            // .navbar-overlay {
+            //     height: 100vh;
+            // }
+            // .navbar-overlay.open{
+            //     display: inline-block;
+            //     background-color: black;
+            //     opacity: 0.3;
+            // }
+        }
+        .navbar-sidebar.open {
+            top: 60px;
+            left: 0px;
+            transition: 600ms;
+        }
+
+        .navbar-overlay {
+            top: 60px;
+            left: 400px;
+            transition: 500ms;
+            // z-index: 13;
+        }
+        .navbar-overlay.open{
+            top: 60px;
+            left: 0px;
+            transition: 200ms;
+        }
+    }
+}
