--- a/src/View/components/navigation/navbar.scss
+++ b/src/View/components/navigation/navbar.scss
@@ -64,7 +64,7 @@
         // z-index: 7;
         visibility: hidden;
         position: absolute;
-        margin-top: 10px;
+        margin: 10px 20px 0px 0px;
         right: 10px;
 
 
