--- a/src/View/components/hero/hero.scss
+++ b/src/View/components/hero/hero.scss
@@ -75,7 +75,7 @@
         display: flex;
         flex-direction: column-reverse;
         background-color: white;
-        border: 1px solid black;
+        // border: 1px solid black;
         margin: 0px 0px 600px 0px;
 
         .hero-right {
