--- a/src/View/components/reviews/review.scss
+++ b/src/View/components/reviews/review.scss
@@ -145,3 +145,35 @@
 
     }
 }
+
+
+@media only screen and (min-width: 320px) and (max-width: 400px){ //Mobile
+
+    .review-container {
+
+        .review-wrapper {
+            height: max-content;
+
+            .review-header {
+
+                .spikes {
+                    margin: -3px 0px 0px 2px;
+                }
+
+                .review-header-text {
+                    margin: 5px 20px;
+                    color: #838383;
+                    font-size: 17px;
+                    font-weight: 600;
+    
+                    span {
+                        color: #69F0AE;
+                    }
+    
+                }
+            }
+        }
+    
+    }
+
+}
