--- a/src/View/components/footer/footer.scss
+++ b/src/View/components/footer/footer.scss
@@ -52,8 +52,8 @@
                 }
 
                 div:nth-child(5) {
-                    background-color: white;
-                    color: #2E2E2E;
+                    background-color: #0C4CAC;
+                    color: #fff;
                     padding: 5px 10px;
                     font-weight: 500;
                     border-radius: 19px;
@@ -75,5 +75,5 @@
 
 @media only screen and (min-width: 320px) and (max-width: 400px){ //Mobile
  
-    
+
 }
