--- a/src/View/pages/about/about.scss
+++ b/src/View/pages/about/about.scss
@@ -413,13 +413,17 @@
                     font-weight: 500;
                     color: #0C4CAC;
                     margin: 0px 0px 50px 0px;
+                    padding: 0px 10px;
                 }
     
                 .aboutUs-team-member {
                     display: flex;
-                    flex-direction: row;
+                    flex-direction: column;
+                    align-items: center;
                     gap: 30px;
-                    margin: 0px 0px 10px 0px;
+                    margin: 0px 0px 60px 0px;
+                    padding: 0px 10px 30px 10px;
+                    border-bottom: 1px solid #f1f1f1;
     
                     .profile-pic-holder {
                         position: relative;
