--- a/src/View/pages/booking/booking.scss
+++ b/src/View/pages/booking/booking.scss
@@ -35,6 +35,24 @@
 
             p{
                 z-index: 7;
+                // transform: translateY(-140px);
+                // transition: transform 1000ms ease 1s;
+                // top: 460px;
+                animation-name: slideDownUp;
+                animation-duration: 1.5s;
+
+            }
+
+            @keyframes slideDownUp {
+                from {
+                    transform: translateY(100px);
+                    opacity: 0;
+                }
+
+                to {
+                    transform: translateY(0px);
+                    opacity: 1;
+                }
             }
 
         }
@@ -43,4 +61,62 @@
     .booking-wrapper {
 
     }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 400px){ //Mobile
+
+    .booking-container {
+    
+        .booking-banner {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: 200px;
+            margin: 60px 0px 0px 0px;
+            background-image: url("../../assets/images/alarm.jpg");
+            position: relative;
+            background-size: cover;
+            background-position-y: 0px;
+    
+            .booking-overlay {
+                height: 100%;
+                width: 100%;
+    
+            }
+    
+            .booking-header {
+                height: 100%;
+                width: 100%;
+                font-size: 20px;
+    
+                p{
+                    z-index: 7;
+                    // transform: translateY(-140px);
+                    // transition: transform 1000ms ease 1s;
+                    // top: 460px;
+                    animation-name: slideDownUp;
+                    animation-duration: 1.5s;
+    
+                }
+    
+                @keyframes slideDownUp {
+                    from {
+                        transform: translateY(100px);
+                        opacity: 0;
+                    }
+    
+                    to {
+                        transform: translateY(0px);
+                        opacity: 1;
+                    }
+                }
+    
+            }
+        }
+    
+        .booking-wrapper {
+    
+        }
+    }    
+
 }
