--- a/src/View/pages/booking/booking.scss
+++ b/src/View/pages/booking/booking.scss
@@ -35,6 +35,7 @@
 
             p{
                 z-index: 7;
+                margin-top: -70px;
                 // transform: translateY(-140px);
                 // transition: transform 1000ms ease 1s;
                 // top: 460px;
@@ -55,6 +56,65 @@
                 }
             }
 
+        }
+    }
+
+    .booking-decision {
+        width: 800px;
+        // border: 1px solid red;
+        border-radius: 40px;
+        height: max-content;
+        margin: -100px auto 0px auto;
+        z-index: 2;
+        background-color: white;
+        box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+        padding: 40px;
+
+        .decision-item {
+            width: 80%;
+            border: 1px solid #ececec;
+            padding: 0px 0px 20px 0px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 30px;
+            border-radius: 40px;
+
+            .button-now {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 60px;
+                font-size: 20px;
+                font-weight: 500;
+                // border: 1px solid #c5c5c5;
+                width: 100%;
+                background-color: #00C851;
+                color: white;
+                padding: 50px 0px;
+                border-radius: 40px;
+            }
+
+            .button-later {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 60px;
+                font-size: 20px;
+                font-weight: 500;
+                // border: 1px solid #c5c5c5;
+                width: 100%;
+                background-color: #ffbb33;;
+                color: white;
+                padding: 50px 0px;
+                border-radius: 40px;
+            }
         }
     }
 
@@ -87,7 +147,7 @@
             .booking-header {
                 height: 100%;
                 width: 100%;
-                font-size: 20px;
+                font-size: 18px;
     
                 p{
                     z-index: 7;
@@ -111,6 +171,69 @@
                     }
                 }
     
+            }
+        }
+
+        .booking-decision {
+            width: 290px;
+            // border: 1px solid red;
+            height: 400px;
+            margin: -60px auto 100px auto;
+            border-radius: 40px;
+            height: max-content;
+            // margin: -100px auto 0px auto;
+            z-index: 2;
+            background-color: white;
+            box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
+            padding: 40px 10px;
+    
+            .decision-item {
+                width: 80%;
+                border: 1px solid #ececec;
+                padding: 0px 0px 20px 0px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                gap: 30px;
+                border-radius: 40px;
+                text-align: center;
+                font-size: 13px;
+    
+                .button-now {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 60px;
+                    font-size: 20px;
+                    font-weight: 500;
+                    // border: 1px solid #c5c5c5;
+                    width: 100%;
+                    background-color: #00C851;
+                    color: white;
+                    padding: 50px 0px;
+                    border-radius: 40px;
+                }
+    
+                .button-later {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 60px;
+                    font-size: 20px;
+                    font-weight: 500;
+                    // border: 1px solid #c5c5c5;
+                    width: 100%;
+                    background-color: #ffbb33;;
+                    color: white;
+                    padding: 50px 0px;
+                    border-radius: 40px;
+                }
             }
         }
     
