--- a/src/View/pages/booking/booking.scss
+++ b/src/View/pages/booking/booking.scss
@@ -191,6 +191,8 @@
             align-items: center;
             gap: 30px;
             padding: 40px 10px;
+            animation-name: slideDownUp2;
+            animation-duration: 2.5s;
     
             .decision-item {
                 width: 80%;
@@ -234,6 +236,18 @@
                     padding: 50px 0px;
                     border-radius: 40px;
                 }
+            }
+        }
+    
+        @keyframes slideDownUp2 {
+            from {
+                transform: translateY(100px);
+                // opacity: 0;
+            }
+
+            to {
+                transform: translateY(0px);
+                // opacity: 1;
             }
         }
     
