--- a/src/View/pages/booking/booking.scss
+++ b/src/View/pages/booking/booking.scss
@@ -70,33 +70,119 @@
         box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
         overflow: hidden;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         gap: 30px;
         padding: 40px;
 
         .decision-item {
-            width: 80%;
+            width: 30%;
+            height: 300px;
             border: 1px solid #ececec;
+            // border: 2px solid #0C4CAC;
             padding: 0px 0px 20px 0px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             gap: 30px;
-            border-radius: 40px;
+            border-radius: 10px;
+            position: relative;
+            // background-color: #37BC9B;
+            // background-color: #48CFAD;
+            overflow: hidden;
+
+            .icon {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                height: 50px;
+                width: 50px;
+                top: 10px;
+                left: 15px;
+                z-index: 8;
+                // color: #052659;
+                color: white;
+                // background-color: #48CFAD;
+                padding: 15px;
+                border-radius: 50%;
+            }
+
+            .icon.now {
+                background-color: #37BC9B;
+            }
+
+            .icon.later {
+                background-color: #F6BB42;
+            }
+
+            .icon.monitor {
+                background-color: #D770AD;
+            }
+
+            .action {
+                display: flex;
+                align-items: end;
+                // border: 1px solid red;
+                height: 100px;
+                width: 92%;
+                padding: 50px 0px 40px 20px;
+                margin-top: -130px ;
+                position: absolute;
+                color: white;
+                font-weight: 500;
+                font-size: 19px;
+            }
+
+            .action.now {
+                background-color: #48CFAD;
+            }
+
+            .action.later {
+                background-color: #ffce54;
+            }
+
+            .action.monitor {
+                background-color: #EC87C0;
+            }
+
+            .action-button {
+                position: absolute;
+                // border: 1px solid black;
+                height: 60px;
+                width: 60px;
+                border-radius: 50%;
+                top: 250px;
+                left: 170px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: white;
+            }
+
+            .action-button.now {
+                background-color: #37BC9B;
+            }
+
+            .action-button.later {
+                background-color: #F6BB42;
+            }
+
+            .action-button.monitor {
+                background-color: #D770AD;
+            }
 
             .button-now {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                height: 60px;
+                height: 30px;
                 font-size: 20px;
                 font-weight: 500;
-                // border: 1px solid #c5c5c5;
+                border: 1px solid #c5c5c5;
                 width: 100%;
-                background-color: #00C851;
-                color: white;
+                color: #0C4CAC;
                 padding: 50px 0px;
                 border-radius: 40px;
             }
@@ -110,10 +196,19 @@
                 font-weight: 500;
                 // border: 1px solid #c5c5c5;
                 width: 100%;
-                background-color: #ffbb33;;
+                background-color: #ffbb33;
                 color: white;
                 padding: 50px 0px;
                 border-radius: 40px;
+            }
+
+            .description {
+                // border: 1px solid #c5c5c5;
+                width: 90%;
+                color: #c5c5c5;
+                display: flex;
+                z-index: 5;
+                margin-top: 130px;
             }
         }
     }
@@ -203,7 +298,7 @@
                 align-items: center;
                 justify-content: center;
                 gap: 30px;
-                border-radius: 40px;
+                border-radius: 20px;
                 text-align: center;
                 font-size: 13px;
     
