--- a/src/View/components/footer/footer.scss
+++ b/src/View/components/footer/footer.scss
@@ -43,6 +43,7 @@
                 display: flex;
                 // gap: 20px;
                 justify-content: space-around;
+                align-items: center;
                 color: white;
                 font-size: 11px;
                 // border: 1px solid white;
