--- a/src/View/pages/booking/booking.scss
+++ b/src/View/pages/booking/booking.scss
@@ -350,6 +350,171 @@
                     padding: 50px 0px;
                     border-radius: 40px;
                 }
+                .action-button {
+                    position: absolute;
+                    // border: 1px solid black;
+                    height: 50px;
+                    width: 50px;
+                    border-radius: 50%;
+                    top: 250px;
+                    left: 170px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: white;
+                }
+            }
+        }
+    
+        @keyframes slideDownUp2 {
+            from {
+                transform: translateY(100px);
+                // opacity: 0;
+            }
+
+            to {
+                transform: translateY(0px);
+                // opacity: 1;
+            }
+        }
+    
+        .booking-wrapper {
+    
+        }
+    }    
+
+}
+
+
+@media only screen and (min-width: 401px) and (max-width: 450px){ //Mobile
+
+    .booking-container {
+    
+        .booking-banner {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: 200px;
+            margin: 60px 0px 0px 0px;
+            background-image: url("../../assets/images/alarm.jpg");
+            position: relative;
+            background-size: cover;
+            background-position-y: 0px;
+    
+            .booking-overlay {
+                height: 100%;
+                width: 100%;
+    
+            }
+    
+            .booking-header {
+                height: 100%;
+                width: 100%;
+                font-size: 18px;
+    
+                p{
+                    z-index: 7;
+                    // transform: translateY(-140px);
+                    // transition: transform 1000ms ease 1s;
+                    // top: 460px;
+                    animation-name: slideDownUp;
+                    animation-duration: 1s;
+    
+                }
+    
+                @keyframes slideDownUp {
+                    from {
+                        transform: translateY(100px);
+                        opacity: 0;
+                    }
+    
+                    to {
+                        transform: translateY(0px);
+                        opacity: 1;
+                    }
+                }
+    
+            }
+        }
+
+        .booking-decision {
+            width: 290px;
+            // border: 1px solid red;
+            height: 400px;
+            margin: -60px auto 100px auto;
+            border-radius: 40px;
+            height: max-content;
+            // margin: -100px auto 0px auto;
+            z-index: 2;
+            background-color: white;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
+            padding: 40px 10px;
+            animation-name: slideDownUp2;
+            animation-duration: 1.5s;
+            animation-timing-function: ease-out;
+            // animation-delay: 0.5s;
+
+    
+            .decision-item {
+                width: 80%;
+                // border: 1px solid #ececec;
+                box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+                padding: 0px 0px 20px 0px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                gap: 30px;
+                border-radius: 20px;
+                text-align: center;
+                font-size: 13px;
+    
+                .button-now {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 60px;
+                    font-size: 20px;
+                    font-weight: 500;
+                    // border: 1px solid #c5c5c5;
+                    width: 100%;
+                    background-color: #00C851;
+                    color: white;
+                    padding: 50px 0px;
+                    border-radius: 40px;
+                }
+    
+                .button-later {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 60px;
+                    font-size: 20px;
+                    font-weight: 500;
+                    // border: 1px solid #c5c5c5;
+                    width: 100%;
+                    background-color: #ffbb33;;
+                    color: white;
+                    padding: 50px 0px;
+                    border-radius: 40px;
+                }
+                .action-button {
+                    position: absolute;
+                    // border: 1px solid black;
+                    height: 50px;
+                    width: 50px;
+                    border-radius: 50%;
+                    top: 250px;
+                    left: 170px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: white;
+                }
             }
         }
     
