patient login created >320px and desktop..

--- a/src/View/pages/patientLogin/plogin.scss
+++ b/src/View/pages/patientLogin/plogin.scss
@@ -102,7 +102,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                margin: 40px 20px -50px auto;
+                margin: 70px auto -50px auto;
 
                 img {
                     width: 200px;
@@ -196,7 +196,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                margin: 40px 20px -50px auto;
+                margin: 70px auto -50px auto;
 
                 img {
                     width: 200px;
